# boaaa

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  LLVMVersionConfig-template.cmake  README.md  current info.txt  libfmt-res  opt-9-result.txt  pipeline.cline  run-summary-bmi160  slib-opt-pipeline.cline  slib-pipeline.cline
MACROLIST_GEN/boaaa/lv/macrolist/: MACROLIST_EVAL2.inc  MACROLIST_UNDEF.inc  MACROLIST_pushMacros.inc
MACROLIST_GEN/src/: Generator.java
__tmp/: LLVMConfig.cmake
analyse/: build.gradle  regex.txt  results_full_4.json  results_llvm_final.json  results_slib_final.json  results_slib_opt.json  settings.gradle
analyse/src/main/java/: AliasResult.java  AreaDiagramm.java  AreaPrinter.java  ColorUtil.java  Diagramm.java  DiagrammGenerator.java  DiagrammPrinter.java  DiagrammType.java  FontUtil.java  IconUtil.java  LineChart.java  LinePrinter.java  Main.java  ModRefInfo.java  Polygon2D.java  Polyline2D.java  PrintUtil.java  RelationChart.java  StringLineChart.java  TimeInfo.java  Util.java
analysis/: CMakeLists.txt
cmake/: LLVMVersionIncludeHelp.cmake  addAnalysis.cmake  checkOrCreateFoulder.cmake  copyAndRename.cmake  createLLVMWrapperTarget.cmake  registerLLVMVersion.cmake  replaceLast.cmake
include/: stdafx.h
include/boaaa/: EvaluationResult.h  GETDL_INFO.inc  MacroHelp.inc  build_shared_lib.h  commandline_types.h  dynamic_interface.h  export.h  minwindef_undef.inc  stdafx.h
include/boaaa/lv/: AnalysisDiscrepancyChecker.h  CountPass.h  EvaluatePass.h  EvaluationContainer.h  EvaluationPass.h  EvaluationPassDefinitions.h  PassManagerTimeMessure.h  StringRefHold.h  TimePass.h  initalize_pass_end_boaaa.h  stdlvafx.h  sup_LLVM_VERSION.h  sup_LLVM_VERSION_help.inc  unify_LLVM_VERSION.def  version_context.h
include/boaaa/lv/100/: Interface_100.h  StringRefVersionParser100.h  initalizeAAs_100.h
include/boaaa/lv/40/: Interface_40.h  initalizeAAs_40.h
include/boaaa/lv/50/: Interface_50.h  SeaDsaWrapper.h  initalizeAAs_50.h
include/boaaa/lv/60/: Interface_60.h  StringRefVersionParser60.h  initalizeAAs_60.h
include/boaaa/lv/71/: Interface_71.h  StringRefVersionParser71.h  initalizeAAs_71.h
include/boaaa/lv/80/: Interface_80.h  StringRefVersionParser80.h  initalizeAAs_80.h
include/boaaa/lv/90/: Interface_90.h  StringRefVersionParser90.h  initalizeAAs_90.h
include/boaaa/lv/include_versions/: BOAAA_DLInterface.inc  BOAAA_StringRefVP.inc  LLVM_AAResults.inc  LLVM_AliasResult.inc  LLVM_CallVersionUnifyer.inc  LLVM_DenseMapInfo.inc  LLVM_Function.inc  LLVM_FunctionPass.inc  LLVM_ImmutablePass.inc  LLVM_Instruction.inc  LLVM_LLVMContext.inc  LLVM_LegacyPassManager.inc  LLVM_LoadInst.inc  LLVM_LocationSize.inc  LLVM_MemoryLocation.inc  LLVM_ModRefInfo.inc  LLVM_Module.inc  LLVM_ModulePass.inc  LLVM_RegisterPass.inc  LLVM_SetVector.inc  LLVM_SmallSetVector.inc  LLVM_SmallVector.inc  LLVM_StoreInst.inc  LLVM_Type.inc  LLVM_Use.inc  LLVM_Value.inc  LLVM_include_LoopInfo.inc  LLVM_include_Pass_h.inc  popMacros.inc  pushMacros.inc
include/boaaa/lv/macrolist/: MACROLIST_DEF.h  MACROLIST_EVAL.inc  MACROLIST_STORE.inc  MACROLIST_popMacros.inc
include/boaaa/lvm/: DLHandle.h  LLVMVersionManager.h  StringRefVersionParserCurrent.h  UnixDLHandle.h  WindowsDLHandle.h
include/boaaa/support/: AutoDeleter.h  LLVMAlignOf.h  LLVMErrorOr.h  UNDEF__STRINGIFY.h  UnionFind.h  UnionFindMap.h  __STRINGIFY.h  compile_error.h  consume_macro.h  data_store.h  dump_ostream.h  enable_if_else.h  error.h  raw_type.h  select_type.h  struct_help.h  version_error.h  xxhash.h
include/boaaa/vp/: StringRefVersionParser.h  VersionParser.h
lib/boaaa/: CMakeLists.txt
lib/boaaa/lv/: CMakeLists.txt  CountPass.cpp  EvaluationPass.cpp  EvaluationPassDefinitions.cpp  llvm_version.cpp  version_context.h
lib/boaaa/lv/100/: Interface_100.cpp  StringRefVersionParser100.cpp
lib/boaaa/lv/40/: Interface_40.cpp  Interface_40.h  StringRefVersionParser40.cpp  StringRefVersionParser40.h
lib/boaaa/lv/50/: Interface_50.cpp  Interface_50.h  SeaDsaWrapper.cpp  StringRefVersionParser50.cpp  StringRefVersionParser50.h
lib/boaaa/lv/60/: Interface_60.cpp  StringRefVersionParser60.cpp
lib/boaaa/lv/71/: Interface_71.cpp  StringRefVersionParser71.cpp
lib/boaaa/lv/80/: Interface_80.cpp  StringRefVersionParser80.cpp
lib/boaaa/lv/90/: Interface_90.cpp  Interface_90.h  StringRefVersionParser90.cpp  StringRefVersionParser90.h
lib/boaaa/lvm/: CMakeLists.txt  LLVMVersionManager.cpp  StringRefVersionParserCurrent.cpp  UNIXDLHandle.cpp  UNIXDLHandle.h  WindowsDLHandle.cpp  WindowsDLHandle.h
lib/boaaa/support/: CMakeLists.txt  data_store.cpp  version_error.cpp  xxhash.cpp
lib/boaaa/vp/: CMakeLists.txt  VersionParser.cpp
llvm/: CMakeLists.txt.in
llvm_version/: DUMMY.MD
mac_bc_build/: config-template.conf  generate_bc.sh  test.sh
main/: CMakeLists.txt
main/src/: boaaa.cpp
replace/: CMakeLists.txt  STLExtras.h
tools/: CMakeLists.txt
tools/BUILD_LLVM/: CMakeLists.txt  do_nothing.cpp
tools/boaaa/: CMakeLists.txt  ModuleReader.cpp  ModuleReader.h  PiplineBuilder.cpp  PiplineBuilder.h  boaaa.cpp  command_line_seperator.cpp  command_line_seperator.h  filesystem_check.h
